--- a/api/package.json
+++ b/api/package.json
@@ -6,10 +6,14 @@
   "author": "aguiot-- <aguiot--@student.42.fr>",
   "main": "index.js",
   "scripts": {
-	"start": "nodemon --legacy-watch index.js"
+    "start": "nodemon --legacy-watch index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "neo4j-driver": "^1.7.5"
+    "express-graphql": "^0.6.12",
+    "neo4j-driver": "^1.7.5",
+    "cors": "^2.8.4",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.3"
   }
 }
