--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   api:
-    image: triinoxys/matcha-api
+    image: alexandregv/matcha-api
     build: ./api/
     volumes:
       - './api:/usr/src/'
@@ -12,7 +12,7 @@ services:
       - '4000:4000'
 
   front:
-    image: triinoxys/matcha-front
+    image: alexandregv/matcha-front
     build: ./front/
     volumes:
       - './front:/usr/src/'
