--- a/api/package.json
+++ b/api/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "matcha_back",
+  "name": "matcha-api",
   "version": "1.0.0",
   "private": true,
-  "description": "Matcha backend",
+  "type": "module",
+  "description": "Matcha API",
   "author": "aguiot-- <aguiot--@student.42.fr>",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --legacy-watch index.js"
+    "start": "nodemon --legacy-watch -- --experimental-modules index.js"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.17.1",
     "express-graphql": "^0.6.12",
-    "neo4j-driver": "^1.7.5",
-    "cors": "^2.8.4",
     "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.3"
+    "graphql-tools": "^4.0.3",
+    "neo4j-driver": "^1.7.5",
+    "neo4j-graphql-js": "^2.7.1"
   }
 }
