--- a/front/package.json
+++ b/front/package.json
@@ -1,8 +1,13 @@
 {
   "name": "matcha-front",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "Matcha API",
+  "author": "aguiot-- <aguiot--@student.42.fr>",
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.4.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
