Add APOC plugin to neo4j

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,10 +27,15 @@ services:
       - .env
     environment:
       - NEO4J_AUTH=${NEO4J_USER-neo4j}/${NEO4J_PASS-letmein}
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_dbms_shell_enabled=true
     ports:
       - "7473:7473"
       - "7474:7474"
       - "7687:7687"
     volumes:
       - ./db/data:/data
+      - ./db/plugins:/plugins
 #   command: /bin/bash -c "[ -f /data/graph.db.dump ] && /var/lib/neo4j/bin/neo4j-admin load --from=/data/graph.db.dump --force; /sbin/tini -g -- /docker-entrypoint.sh neo4j"
