--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,11 @@
   "author": "aguiot-- <aguiot--@student.42.fr>",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --legacy-watch -- --experimental-modules index.js"
+    "start": "nodemon --legacy-watch -- -r esm index.js"
   },
   "dependencies": {
     "cors": "^2.8.4",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
