--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,10 @@
   "author": "aguiot-- <aguiot--@student.42.fr>",
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.4.2",
     "node-sass": "^4.12.0",
