--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@apollo/react-hooks": "^3.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.4.4",
