--- a/front/package.json
+++ b/front/package.json
@@ -17,8 +17,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0",
-    "styled-components": "^4.3.2"
+    "react-scripts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
