--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "graphql": "^14.4.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-chat-ui": "^0.3.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0"
