--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "description": "Matcha API",
   "author": "aguiot-- <aguiot--@student.42.fr>",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --legacy-watch -e js,mjs,json,gql,coffee,litcoffee -- -r esm index.js"
+    "start": "nodemon --legacy-watch -e js,mjs,json,gql,coffee,litcoffee -- -r esm src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
