--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "apollo-server-express": "^2.9.0",
     "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^8.1.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "neo4j-driver": "^1.7.5",
-    "neo4j-graphql-js": "^2.7.1"
+    "neo4j-graphql-js": "^2.7.1",
+    "uniqid": "^5.0.3"
   }
 }
