--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-chat-ui": "^0.3.2",
     "react-dom": "^16.9.0",
+    "react-hook-form": "^3.22.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0"
   },
