--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.12",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-error": "^1.1.11",
+    "apollo-link-http": "^1.5.15",
     "graphql": "^14.5.3",
+    "graphql-tag": "^2.10.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-chat-ui": "^0.3.2",
