--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "seed": "node -r esm scripts/seed.js"
   },
   "dependencies": {
-    "apollo-server-express": "^2.9.0",
+    "apollo-server": "^2.9.3",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.1.0",
