--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.22.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "jwt-decode": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
