--- a/front/package.json
+++ b/front/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^3.22.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
-    "jwt-decode": "^2.2.0"
+    "jwt-decode": "^2.2.0",
+    "rc-slider": "^8.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
