--- a/front/package.json
+++ b/front/package.json
@@ -20,15 +20,16 @@
     "apollo-link-http": "^1.5.15",
     "graphql": "^14.5.3",
     "graphql-tag": "^2.10.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.12.0",
+    "rc-slider": "^8.7.1",
     "react": "^16.9.0",
     "react-chat-ui": "^0.3.2",
+    "react-chips": "^0.8.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.22.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0",
-    "jwt-decode": "^2.2.0",
-    "rc-slider": "^8.7.1"
+    "react-scripts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
