--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - NEO4J_dbms_security_procedures_unrestricted=apoc.*
       - NEO4J_apoc_import_file_enabled=true
       - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_apoc_trigger_enabled=true
       - NEO4J_dbms_shell_enabled=true
     ports:
       - "7473:7473"
