--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,7 @@
     "faker": "^4.1.0",
     "neo4j-driver": "^1.7.5",
     "neo4j-graphql-js": "^2.7.1",
-    "sendmail": "^1.6.1",
+    "nodemailer": "^6.3.1",
     "uniqid": "^5.0.3"
   }
 }
