--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react-chips": "^0.8.0",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.22.3",
+    "react-id-generator": "^3.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0"
   },
