--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "neo4j-graphql-js": "^2.7.1",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.3.1",
-    "uniqid": "^5.0.3"
+    "uniqid": "^5.0.3",
+    "node-fetch": "^2.6.0"
   }
 }
