--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "react": "^16.9.0",
     "react-chat-ui": "^0.3.2",
     "react-chips": "^0.8.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.22.3",
     "react-router-dom": "^5.0.1",
