--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "apollo-link-context": "^1.0.18",
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.3",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
@@ -30,7 +31,8 @@
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.22.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
