--- a/front/package.json
+++ b/front/package.json
@@ -6,11 +6,13 @@
   "author": "aguiot-- <aguiot--@student.42.fr>",
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
+    "@babel/runtime": "^7.8.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "animate.css": "^3.7.2",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -25,11 +27,13 @@
     "node-sass": "^4.12.0",
     "rc-slider": "^8.7.1",
     "react": "^16.9.0",
+    "react-apollo-notifications": "^1.0.0",
     "react-chat-ui": "^0.3.2",
     "react-chips": "^0.8.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-hook-form": "^3.22.3",
+    "react-notifications-component": "^2.2.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "subscriptions-transport-ws": "^0.9.16"
