--- a/front/package.json
+++ b/front/package.json
@@ -21,13 +21,17 @@
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.15",
     "apollo-link-ws": "^1.0.19",
+    "create-react-context": "^0.3.0",
     "graphql": "^14.5.3",
     "graphql-tag": "^2.10.1",
+    "hoist-non-react-statics": "^3.3.2",
     "jwt-decode": "^2.2.0",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.12.0",
     "rc-slider": "^8.7.1",
     "react": "^16.9.0",
     "react-apollo-notifications": "^1.0.0",
+    "react-breakpoints": "^3.0.3",
     "react-chat-ui": "^0.3.2",
     "react-chips": "^0.8.0",
     "react-cookies": "^0.1.1",
