--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,6 @@
 CHOKIDAR_USEPOLLING=true
 REACT_APP_API_IMG_URL=https://api.cloudinary.com/v1_1/dtfunbpou/image/upload
+
+REACT_APP_FRONT_HOST=http://localhost:3000
+REACT_APP_API_HOST=http://localhost:4000/graphql
+REACT_APP_WS_HOST=ws://localhost:4000/graphql
