--- a/api/.env
+++ b/api/.env
@@ -6,7 +6,7 @@ JWT_SECRET=matcha
 MAIL_HOST=ssl0.ovh.net
 MAIL_PORT=587
 MAIL_USER=matcha@alexandregv.fr
-MAIL_PASS=pass
+MAIL_PASS=matcha4242
 
 FRONT_HOST=http://localhost:3000
 API_HOST=http://localhost:4000/graphql
