--- a/api/package.json
+++ b/api/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "apollo-server": "^2.9.3",
+    "deg2rad": "^1.0.0",
     "dotenv": "^8.1.0",
     "esm": "^3.2.25",
     "faker": "^4.1.0",
     "neo4j-driver": "^1.7.5",
     "neo4j-graphql-js": "^2.7.1",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.3.1",
-    "uniqid": "^5.0.3",
-    "node-fetch": "^2.6.0"
+    "uniqid": "^5.0.3"
   }
 }
