--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.1.0",
     "esm": "^3.2.25",
     "faker": "^4.1.0",
+    "fakerator": "^0.3.1",
     "neo4j-driver": "^1.7.5",
     "neo4j-graphql-js": "^2.7.1",
     "node-fetch": "^2.6.0",
